--- a/index.html
+++ b/index.html
@@ -454,6 +454,23 @@
         </p>
       </div>
     </footer>
+    <!-- Модальное окно -->
+    <div class="modal-container">
+      <div class="modal">
+        <button class="modal-close-button">
+          <span class="visually-hidden">Закрыть</span>
+        </button>
+        <section class="modal-content">
+          <h2 class="modal-title">Мы обязательно ответим вам!</h2>
+          <form class="modal-form" action="https://echo.htmlacademy.ru/" method="post">
+            <input class="modal-input modal-name" type="text" placeholder="Имя и фамилия" name="name">
+            <input class="modal-input modal-email" type="email" placeholder="email@example.com" name="email" required>
+            <input class="modal-input modal-appeal" type="text" placeholder="В свободной форме" name="appeal">
+            <button class=" modal-button button-secondary">Отправить</button>
+          </form>
+        </section>
+      </div>
+    </div>
   </div>
   <script src="js/index.js"></script>
 </body>
