--- a/catalog.html
+++ b/catalog.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <title>Интернет-магазин "Глейси" </title>
-  <link rel="stylesheet" href="styles/styles.css" />
-  <link rel="icon" href="favicon.ico" type="image/svg+xml" />
+  <link rel="stylesheet" href="styles/styles.css">
+  <link rel="icon" href="favicon.ico" type="image/svg+xml" >
   <link rel="icon" type="image/png" href="images/favicon.png">
 </head>
 
@@ -14,16 +14,18 @@
     <header class="page-header">
       <!-- Логотип -->
       <a class="header-logo" href="index.html">
-        <img src="images/logo.svg" width=" 137" height="56" alt="Логотип интернет-магазин Глейси.">
+        <img src="images/logo.svg" width="137" height="56" alt="Логотип интернет-магазин Глейси.">
       </a>
       <!-- Навигация -->
       <nav class="header-navigation">
         <ul class="navigation-list">
           <li class="navigation-item">
-            <a class="navigation-link current" href="#">Каталог</a>
+            <a class="navigation-link" href="#">Каталог</a>
             <div class="catalog-popup">
-              <span class="catalog-popup-title">Новинки</span>
               <ul class="catalog-popup-list">
+                <li class="catalog-popup-item">
+                  <a class="catalog-popup-link popup-link-new" href="#">Новинки</a>
+                </li>
                 <li class="catalog-popup-item">
                   <a class="catalog-popup-link" href="catalog.html">Сливочное</a>
                 </li>
@@ -52,21 +54,25 @@
         <a class="header-phone" href="tel:+78005558628">+7 800 555-86-28</a>
         <!-- Поиск по сайту -->
         <div class="search-wrapper">
-          <button class="search-button" type="button"></button>
+          <button class=" header-button search-button" type="button"></button>
           <div class="search-popup">
             <form class="search-popup-form" action="https://echo.htmlacademy.ru/" method="post">
-              <input class="search-popup-input" type="search" placeholder="Поиск по сайту">
+              <!-- Для отображения ошибки ввода, добавить тегу input класс is-error -->
+              <input class="search-popup-input " type="search" placeholder="Поиск по сайту" name="search-form">
             </form>
           </div>
         </div>
         <!-- Кнопка войти -->
         <div class="login-wrapper">
-          <button class="login-button" type="button">Вход</button>
+          <button class="header-button login-button" type="button">Вход</button>
           <div class="login-popup">
             <h2 class="login-popup-title">Личный кабинет</h2>
             <form class="login-popup-form" action="https://echo.htmlacademy.ru/" method="post">
-              <input class="login-popup-input" type="email" placeholder="email@example.com" required>
-              <input class="login-popup-input input-password " type="password" required>
+              <!-- Для отображения ошибки ввода, добавить тегу input класс is-error -->
+              <input class="login-popup-input " type="email" placeholder="email@example.com" name="login-email"
+                required>
+              <input class="login-popup-input input-password " type="password" value="пароль" placeholder="пароль"
+                name="login-password" required>
               <button class="login-popup-button button-secondary" type="submit">Войти</button>
               <ul class="help-list">
                 <li>
@@ -81,9 +87,10 @@
         </div>
         <!-- Корзина -->
         <div class="basket-wrapper">
-          <button class="basket-button" type="button">2 товара</button>
-          <!-- Если в корзине нет товаров, то к basket-popup добавить класс is-empty -->
-          <div class="basket-popup is-empty">
+          <button class=" header-button basket-button" type="button">2 товара</button>
+          <!-- Чтобы увидеть разные всплывающие окна у корзины перейдите на 664 строку styles.css
+             и измените значения двух свойств на противоположные -->
+          <div class="basket-popup">
             <h3 class="basket-title">Корзина</h3>
             <ul class="basket-list">
               <li class="basket-item">
@@ -117,8 +124,8 @@
               <button class="button-secondary ">Оформить заказ</button>
               <span class="basket-price-total">Итого: 790 ₽</span>
             </div>
-            <div class="basket-popup-empty">Ваша корзина пока пуста</div>
           </div>
+          <div class="basket-popup-empty">Ваша корзина пока пуста</div>
         </div>
       </div>
     </header>
@@ -165,26 +172,34 @@
               <ul class="fat-content-list">
                 <li class="fat-content-item">
                   <label class="radio-label">
-                    <input class=" radio-input" type="radio" name="fat-content" value="0%" />
-                    <span class="fat-content-label">0%</span>
+                    <input class=" radio-input visually-hidden" type="radio" name="fat-content" value="0%" >
+                    <span class="fat-content-label">0%
+                      <span class="radio-mark"></span>
+                    </span>
                   </label>
                 </li>
                 <li class="fat-content-item">
                   <label class="radio-label">
-                    <input class=" radio-input" type="radio" name="fat-content" value="10%" checked />
-                    <span class="fat-content-label">до 10% </span>
+                    <input class=" radio-input visually-hidden" type="radio" name="fat-content" value="10%" checked >
+                    <span class="fat-content-label">10%
+                      <span class="radio-mark"></span>
+                    </span>
                   </label>
                 </li>
                 <li class="fat-content-item">
                   <label class="radio-label">
-                    <input class=" radio-input" type="radio" name="fat-content" value="30%" />
-                    <span class="fat-content-label">до 30% </span>
+                    <input class=" radio-input visually-hidden" type="radio" name="fat-content" value="30%" >
+                    <span class="fat-content-label">30%
+                      <span class="radio-mark"></span>
+                    </span>
                   </label>
                 </li>
                 <li class="fat-content-item">
                   <label class="radio-label">
-                    <input class=" radio-input" type="radio" name="fat-content" value=">30%" />
-                    <span class="fat-content-label">выше 30% </span>
+                    <input class=" radio-input visually-hidden" type="radio" name="fat-content" value=">30%" >
+                    <span class="fat-content-label">выше 30%
+                      <span class="radio-mark"></span>
+                    </span>
                   </label>
                 </li>
               </ul>
@@ -197,37 +212,44 @@
               <ul class="toppings-list">
                 <li class="toppings-item">
                   <label class="checkbox-label">
-                    <input class=" checkbox-input" type="checkbox" name="topping" value="chocolate" checked />
-                    <span class="checkbox-mark"></span>
-                    <span class="toppings-label">шоколадные</span>
+                    <input class=" checkbox-input visually-hidden" type="checkbox" name="topping" value="chocolate"
+                      checked >
+                    <span class="toppings-label">
+                      <span class="checkbox-mark"></span>
+                      шоколадные</span>
                   </label>
                 </li>
                 <li class="toppings-item">
                   <label class="checkbox-label">
-                    <input class=" checkbox-input" type="checkbox" name="topping" value="sugar sprinkles" checked />
-                    <span class="checkbox-mark"></span>
-                    <span class="toppings-label">сахарные посыпки</span>
+                    <input class=" checkbox-input visually-hidden" type="checkbox" name="topping"
+                      value="sugar sprinkles" checked >
+                    <span class="toppings-label">
+                      <span class="checkbox-mark"></span>
+                      сахарные посыпки</span>
                   </label>
                 </li>
                 <li class="toppings-item">
                   <label class="checkbox-label">
-                    <input class=" checkbox-input" type="checkbox" name="topping" value="fruit" />
-                    <span class="checkbox-mark"></span>
-                    <span class="toppings-label">фрукты</span>
+                    <input class=" checkbox-input visually-hidden" type="checkbox" name="topping" value="fruit" >
+                    <span class="toppings-label">
+                      <span class="checkbox-mark"></span>
+                      фрукты</span>
                   </label>
                 </li>
                 <li class="toppings-item">
                   <label class="checkbox-label">
-                    <input class=" checkbox-input" type="checkbox" name="topping" value="syrups" />
-                    <span class="checkbox-mark"></span>
-                    <span class="toppings-label">сиропы</span>
+                    <input class=" checkbox-input visually-hidden" type="checkbox" name="topping" value="syrups" >
+                    <span class="toppings-label">
+                      <span class="checkbox-mark"></span>
+                      сиропы</span>
                   </label>
                 </li>
                 <li class="toppings-item">
                   <label class="checkbox-label">
-                    <input class="checkbox-input" type="checkbox" name="topping" value="jams" />
-                    <span class="checkbox-mark"></span>
-                    <span class="toppings-label">джемы</span>
+                    <input class="checkbox-input visually-hidden" type="checkbox" name="topping" value="jams" >
+                    <span class="toppings-label">
+                      <span class="checkbox-mark"></span>
+                      джемы</span>
                   </label>
                 </li>
               </ul>
@@ -387,29 +409,29 @@
         </ul>
         <!-- Пагинация -->
         <div class="pagination-wrapper">
-        <a class="pagination-button button-primary" href="#">Показать еще</a>
-       <div class="pagination-container">
-          <button class="pagination-arrow arrow-backward"></button>
-          <ul class="pagination-list">
-            <li class="pagination-item">
-              <a class="pagination-link" href="#">1</a>
-            </li>
-            <li class="pagination-item">
-              <a class="pagination-link" href="#">2</a>
-            </li>
-            <li class="pagination-item">
-              <span class="pagination-link pagination-link-divider">3</span>
-            </li>
-            <li class="pagination-item">
-              <a class="pagination-link" href="#">4</a>
-            </li>
-            <li class="pagination-item">
-              <a class="pagination-link" href="#">5</a>
-            </li>
-          </ul>
-          <button class="pagination-arrow  arrow-forward"></button>
+          <a class="pagination-button button-primary" href="#">Показать еще</a>
+          <div class="pagination-container">
+            <button class="pagination-arrow arrow-backward"></button>
+            <ul class="pagination-list">
+              <li class="pagination-item">
+                <a class="pagination-link" href="#">1</a>
+              </li>
+              <li class="pagination-item">
+                <a class="pagination-link" href="#">2</a>
+              </li>
+              <li class="pagination-item">
+                <span class="pagination-link pagination-link-divider">3</span>
+              </li>
+              <li class="pagination-item">
+                <a class="pagination-link" href="#">4</a>
+              </li>
+              <li class="pagination-item">
+                <a class="pagination-link" href="#">5</a>
+              </li>
+            </ul>
+            <button class="pagination-arrow  arrow-forward"></button>
+          </div>
         </div>
-      </div>
       </section>
     </main>
     <footer class="footer">
@@ -418,22 +440,45 @@
         <li class="footer-social-item">
           <a class=" footer-social-link footer-social-tg" href="https://t.me/htmlacademy ">
             <span class="visually-hidden">Телеграм.</span>
+            <svg width="24" height="24" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+              <path fill-rule="evenodd" clip-rule="evenodd" d="M24 12a12 12 0 1
+              1-24 0 12 12 0 0 1 24 0ZM12.43 8.86c-1.17.48-3.5 1.49-7 3.01-.57.23-.86.45-.9.67-.04.36.42.5 1.04.7l.27.08c.6.2
+               1.43.44 1.86.45.39 0 .82-.16 1.3-.48 3.27-2.21 4.96-3.33 5.06-3.35.08-.02.18-.04.25.02.07.07.07.18.06.22-.05.19-1.84
+                1.86-2.77 2.72a28.24 28.24 0 0 0-.82.79c-.57.54-1 .96.02 1.63.5.32.89.59 1.28.85a88.77 88.77 0 0 0 1.8 1.23c.5.35.95.67
+                1.5.62.32-.03.65-.33.82-1.23.4-2.13 1.18-6.73 1.36-8.63.01-.16 0-.31-.02-.47a.5.5 0 0 0-.17-.33.78.78 0 0 0-.46-.14c-.46.01-1.15.25-4.48
+                 1.64Z" />
+            </svg>
           </a>
         </li>
         <li class="footer-social-item">
           <a class=" footer-social-link footer-social-vk" href="https://vk.com/htmlacademy ">
             <span class="visually-hidden">Вконтакте.</span>
+            <svg width="24" height="24" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+              <path fill-rule="evenodd" clip-rule="evenodd" d="M24 12a12
+              12 0 1 1-24 0 12 12 0 0 1 24 0Zm-11.41 2.97h-.72s-1.58.09-2.98-1.18C7.37 12.4 6.03 9.65 6.03 9.65s-.07-.18
+               0-.27c.1-.1.36-.1.36-.1l1.72-.01s.16.02.27.1c.1.05.15.17.15.17s.28.61.65 1.17c.71 1.08 1.05 1.32
+                1.29 1.2.35-.16.25-1.53.25-1.53s0-.5-.18-.71c-.14-.17-.41-.22-.53-.24-.1-.01.06-.2.26-.3.31-.13.86-.13
+                1.5-.13.5 0 .65.03.84.07.46.1.44.41.41 1.08l-.02.7v.18c-.01.34-.02.73.23.88.13.07.45 0
+                 1.26-1.19.38-.56.66-1.23.66-1.23s.07-.12.16-.17c.1-.05.24-.04.24-.04h1.8s.54-.06.63.15c.1.23-.2.75-.94 1.61-.7.82-1.03
+                 1.12-1 1.38.01.2.23.38.66.72.89.73 1.13 1.1 1.18 1.2l.01.01c.4.58-.44.62-.44.62l-1.6.02s-.34.06-.8-.2a3.94
+                 3.94 0 0 1-.69-.6c-.33-.34-.65-.66-.91-.58-.45.12-.44.96-.44.96s0 .18-.1.28c-.1.1-.32.12-.32.12Z" />
+            </svg>
           </a>
         </li>
         <li class=" footer-social-item">
           <a class=" footer-social-link footer-social-yt" href="https://www.youtube.com/user/htmlacademyru ">
             <span class="visually-hidden">Ютуб.</span>
+            <svg width="24" height="24" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+              <path d="m14 11.8-2.8-1.32c-.25-.11-.45.01-.45.29v2.46c0
+              .28.2.4.45.29L14 12.2c.25-.12.25-.3 0-.42ZM12 0a12 12 0 1 0 0 24 12 12 0 0 0 0-24Zm0 16.88c-6.14 0-6.25-.56-6.25-4.88s.1-4.88
+               6.25-4.88c6.14 0 6.25.56 6.25 4.88s-.1 4.88-6.25 4.88Z" />
+            </svg>
           </a>
         </li>
       </ul>
       <!-- Инфо -->
       <div class="info-wrapper">
-        <h2 class="info-title" href="#">Для поставщиков</h2>
+        <h2 class="info-title">Для поставщиков</h2>
         <a class="info-link" href="#">Наши документы</a>
         <a class="info-link" href="#">О производстве</a>
         <a class="info-link" href="#">Экологические стандарты</a>
